--- a/bachelor/questions-baran-gözcü.tex
+++ b/bachelor/questions-baran-gözcü.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{enumitem}
 \usepackage[margin=3cm]{geometry}
-\title{Bachelor Meeting Endri Dibra}
+\title{Bachelor Meeting Baran Gözcü}
 \author{Joanna Brodbeck}
 \date{\today}
 
@@ -55,12 +55,12 @@
     \item How many meetings are there? (1x per week?)
     \item Who am I working with? Alone? Team?
     \item Explain further what the thesis are about
-    \item Where would I work, in the breast of face department
+    \item Where would I work, in the breast / face department
     \item Is it a project that the app is open for patients / general users
     \item How much work is expected
     \item Duration adn when to start?
     \item Communication other than Email?
-    \item What kind of guidance can I expected?
+    \item What kind of guidance can I expect?
     \item Things to learn before the start of the thesis?
 
 
