Neuro Informatics 7. December

--- a/bachelor/questions-baran-gözcü.tex
+++ b/bachelor/questions-baran-gözcü.tex
@@ -38,7 +38,6 @@
 \subsubsection*{Motivation}
 \begin{itemize}
     \item Medical aspect from family: Sister studied Medicine
-    \item Cancer case in my family
     \item Want to make the world a better place
     \item Love to computer science
     \item Programming is a hobby of mine, which I am passionate about.
@@ -55,13 +54,11 @@
     \item How many meetings are there? (1x per week?)
     \item Who am I working with? Alone? Team?
     \item Explain further what the thesis are about
-    \item Where would I work, in the breast / face department
-    \item Is it a project that the app is open for patients / general users
-    \item How much work is expected
-    \item Duration adn when to start?
+    \item Expectation of workload?
+    \item Duration and starting date?
     \item Communication other than Email?
     \item What kind of guidance can I expect?
-    \item Things to learn before the start of the thesis?
+    \item Things to learn before the thesis?
 
 
 
