--- a/bachelor/questions-endri-dibra.tex
+++ b/bachelor/questions-endri-dibra.tex
@@ -51,14 +51,14 @@
 \begin{enumerate}[label=\textbf{\arabic*.}]
     \item What if I am stuck in the process of the bachelor thesis?
     \item What language am I programming in?
-    \item What is the deadline for the bachelor thesis
+    \item What is the deadline for the bachelor thesis?
     \item How many meetings are there? (1x per week?)
     \item Who am I working with? Alone? Team?
-    \item Explain further what the thesis are about
-    \item Where would I work, in the breast of face department
+    \item Explain further what the thesis are about?
+    \item Where would I work, in the breast or face department?
     \item Is it a project that the app is open for patients / general users
-    \item How much work is expected
-    \item Duration adn when to start?
+    \item How much work is expected?
+    \item Duration and when to start?
     \item Communication other than Email?
     \item What kind of guidance can I expected?
     \item Things to learn before the start of the thesis?
