--- a/formal-methods-and-functional-programming/fmfp-summary.tex
+++ b/formal-methods-and-functional-programming/fmfp-summary.tex
@@ -1,10 +1,12 @@
-
 \documentclass{article}
 \usepackage{graphicx}
-\usepackage{amsmath}  % Include the amsmath package
-\usepackage[margin=3cm]{geometry}
+\usepackage{amsmath}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{hyperref}
+\usepackage{listings}
+\usepackage{fancyhdr}
+\usepackage[a4paper, hmargin = 1.5cm, head = 4cm, bottom = 2cm]{geometry}
 
 \lstdefinestyle{javastyle}{
     language=Java,
@@ -62,15 +64,33 @@
 
 \begin{document}
 
-\title{FMFP: Important Concepts to Remember}
-\author{Gnkgo}
-\date{\today}
 
-\maketitle
-\clearpage % Force a page break
+\pagestyle{fancy}
+\lhead{\includegraphics[width=0.27\textwidth]{assets/eth_logo.pdf}}
+\rhead{Formal Methods and Functional Programming}
+\lfoot{Spring Semester 2023}
+\rfoot{\thepage}
+\cfoot{}
+\renewcommand{\footrulewidth}{1pt}
 
+
+\begin{titlepage}
+    \thispagestyle{fancy}
+    \renewcommand{\headrulewidth}{1pt}
+
+    \center
+    \vspace*{1.0cm}
+    \Large Formal Methods and Functional Programming \\[.5 cm]
+    \large
+    \normalsize
+    Gnkgo, Informatik B. Sc. 4. Semester \\
+    \vfill
+\end{titlepage}
+
+% Table of Contents
+\tableofcontents
+\newpage % Start content on a new page
 \tableofcontents 
-\clearpage % Force a page break
 
 
 \section{Haskell}
