--- a/introduction-to-machine-learning/iml-summary.tex
+++ b/introduction-to-machine-learning/iml-summary.tex
@@ -1,21 +1,40 @@
 \documentclass{article}
-
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{listings}
+\usepackage{xcolor}
+\usepackage{hyperref}
+\usepackage{listings}
+\usepackage{fancyhdr}
+\usepackage[a4paper, hmargin = 1.5cm, head = 4cm, bottom = 2cm]{geometry}
+
+\pagestyle{fancy}
+\lhead{\includegraphics[width=0.27\textwidth]{assets/eth_logo.pdf}}
+\rhead{Introduction to Machine Learning}
+\lfoot{Spring Semester 2023}
+\rfoot{\thepage}
+\cfoot{}
+\renewcommand{\footrulewidth}{1pt}
 
 \begin{document}
 
-\title{Machine Learning Concepts}
-\author{Gnkgo}
-\date{\today}
+\begin{titlepage}
+    \thispagestyle{fancy}
+    \renewcommand{\headrulewidth}{1pt}
 
-\maketitle
+    \center
+    \vspace*{1.0cm}
+    \Large Introduction to Machine Learning \\[.5 cm]
+    \large
+    \normalsize
+    Gnkgo, Informatik B. Sc. 4. Semester \\
+    \vfill
+\end{titlepage}
 
-\clearpage
-
+% Table of Contents
 \tableofcontents
+\newpage % Start content on a new page
 
-\clearpage
 % Convexity
 \section{Convexity}
 \begin{itemize}
