--- a/visual-computing/main.tex
+++ b/visual-computing/main.tex
@@ -72,14 +72,14 @@
 %    \small{by dcamenisch}
 %\end{center}
 
-\input{chapters/digital-image.tex}
-\input{chapters/image-segmentation.tex}
-\input{chapters/image-filtering.tex}
-\input{chapters/features.tex}
-\input{chapters/fourier-transform}
-\input{chapters/optical-flow}
-\input{chapters/video-compression}
-\input{chapters/unitary-transforms}
+\input{chapters/jo/digital-image.tex}
+\input{chapters/jo/image-segmentation.tex}
+\input{chapters/jo/image-filtering.tex}
+\input{chapters/jo/features.tex}
+\input{chapters/jo/fourier-transform}
+\input{chapters/jo/optical-flow}
+\input{chapters/jo/video-compression}
+\input{chapters/jo/unitary-transforms}
 \input{chapters/pyramids-and-wavelets}
 \input{chapters/textures}
 \input{chapters/augmented-reality}
