--- a/visual-computing/main.tex
+++ b/visual-computing/main.tex
@@ -12,6 +12,9 @@
 \usepackage{wrapfig}
 \usepackage{fancyhdr}  % Add this package for page numbers
 \usepackage{tabularx}
+\usepackage{pgfplots}
+\usepackage{booktabs} % For better table formatting
+
 
 \usepackage{ulem}  % For underlining
 
@@ -108,9 +111,10 @@
 %\input{chapters/rendering-equation}
 %\input{chapters/rigging-fk-and-ik}
 %\input{chapters/partial-differential-equations}
-%\input{chapters/animation}
+\input{chapters/jo/animation}
 \input{chapters/openGL}
 \input{chapters/jo/radon}
+\input{chapters/jo/computing}
 \end{multicols}
 
 \end{document}
