color change cheatsheet

--- a/visual-computing/main.tex
+++ b/visual-computing/main.tex
@@ -16,6 +16,15 @@
 \usepackage[explicit]{titlesec}
 \usepackage{xcolor}
 \usepackage{tikz}
+\usepackage{tabularx}
+\usepackage{listings}
+
+
+
+
+\definecolor{H1}{HTML}{8b6d9c}
+\definecolor{H2}{HTML}{f2d3ab}
+\definecolor{H3}{HTML}{494d7e}
 
 \definecolor{primaryheader}{RGB}{75,0,130} % Dark Purple
 \definecolor{secondaryheader}{RGB}{106,90,205} % Less Dark Purple
